<resources>
    <string name="app_name">Wasent</string>
    <string name="task_board">Task Board</string>
    <string name="make_invoice">Make Invoice</string>
    <string name="authentication">Authentication</string>
    <string name="manager_login">Manager Login</string>
    <string name="manager_signup">Manager Signup</string>
    <string name="team_login">Team Login</string>
    <string name="initial_settings">Initial settings</string>
    <string name="holded_invoices">Holded invoices</string>
    <string name="customer_invoices_history">Customer invoices history</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="street_address">Street address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zipcode">Zipcode</string>
    <string name="shirt">Shirt</string>
    <string name="shirt_on_hanger_or_box">Shirt on Hanger or Box</string>
    <string name="starch">Starch</string>
    <string name="note">Note</string>
    <string name="add">Add</string>
    <string name="shirt_on_hanger">Shirt on Hanger</string>
    <string name="shirt_in_Box">Shirt in Box</string>
    <string name="no_starch">No starch</string>
    <string name="light_starch">Light starch</string>
    <string name="medium_starch">Medium starch</string>
    <string name="heavy_starch">Heavy starch</string>
    <string name="notice">Notice</string>
    <string name="new_customer_validation_notice">First name, Last name and Phone number are required.</string>
    <string name="dropoff">Drop-off</string>
    <string name="invoice">Invoice</string>
    <string name="pickup">Pick-up</string>
    <string name="history">History</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="cleaner_name_title">Cleaner name</string>
    <string name="cleaner">Cleaner</string>
    <string name="owner">Owner</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
    <string name="sales">Sales</string>
    <string name="empty_not_allowed">This field need to be filled</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="num_pieces">Number of pieces</string>
    <string name="price">Price</string>
    <string name="amount">Amount</string>
    <string name="rate">Rate %</string>
    <string name="select_rate">Select rate</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="add_basic_item">Add basic item</string>
    <string name="could_you_check">Could you check what you entered ?</string>
    <string name="failed_to_add_basic_item">Failed to add new Basic item</string>
    <string name="see_item">See Item</string>
    <string name="see_baseitem">See Base Item</string>
    <string name="see_partial_baseitem">See Partial Base Item</string>
    <string name="see_detailitem">See Detail Item</string>
    <string name="see_detail_base_item">See Detail Base Item</string>
    <string name="add_item">Add item</string>
    <string name="add_item_success">Successfully Item added</string>
    <string name="already_exist_item">Item has already existed</string>
    <string name="not_allowed_special_chars">. $ # [ ] / characters not allowed</string>
    <string name="remove_item">Remove Item</string>
    <string name="do_you_want_remove_item">Do you want to remove Item ?</string>
    <string name="successfully_item_deleted">Successfully Item deleted</string>
    <string name="failed_item_deleted">There was problem while deleting Item</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="successfully_saved">Succefully saved</string>
    <string name="dryclean">Dryclean</string>
    <string name="wetclean">Wetclean</string>
    <string name="clean_only">Clean Only</string>
    <string name="press_only">Press Only</string>
    <string name="alteration_only">Alteration Only</string>
    <string name="households">Households</string>
    <string name="temp_item">Temp item</string>
    <string name="add_detail_item">Add detail item</string>
    <string name="general">General</string>
    <string name="alteration">Alteration</string>
    <string name="failed_to_add_detail_item">Failed to add detail item</string>
    <string name="add_detail_item_success">Successfully detail item added</string>
    <string name="dry_qty">Dry : %d</string>
    <string name="wet_qty">Wet : %d</string>
    <string name="alter_qty">Alter : %d</string>
    <string name="press_qty">Press : %d</string>
    <string name="clean_qty">Clean : %d</string>
    <string name="total">Total: %d</string>
    <string name="please_enter_discount">Please enter discount</string>
    <string name="hold">Hold</string>
    <string name="empty_zero_not_allowed">Empty and Zero not allowed for this field</string>
    <string name="failed_to_add_item">Failed to add item</string>
    <string name="item_name">Item name</string>
    <string name="fail_to_add_temp_item">Failed to add Temp item</string>
    <string name="these_are_not_allowed_empty">These fields need to be filled</string>
    <string name="subtotal_dollar">SubTotal: $ %s</string>
    <string name="discount_dollar">Discount: $ %s</string>
    <string name="tax_dollar">Tax: $ %s</string>
    <string name="env_charge_dollar">ENV: $ %s</string>
    <string name="total_dollar">Total: $ %s</string>
    <string name="prepaid_dollar">Prepaid: $ %s</string>
    <string name="balance_dollar">Balance: $ %s</string>
    <string name="upcharge">Upcharge</string>
    <string name="manual">Manual</string>
    <string name="discount">Discount</string>
    <string name="redo">redo</string>
    <string name="item_comment">Item Comment</string>
    <string name="done">Done</string>
    <string name="remove_detail">- Detail</string>
    <string name="remove">Remove</string>
    <string name="man_detail">Man. Detail</string>
    <string name="split">Split</string>
    <string name="split_on">Split mode on</string>
    <string name="split_off">Split mode off</string>
    <string name="please_enter_upcharge_amount">Please enter upcharge amount</string>
    <string name="please_change_price_manually">Please change price manually</string>
    <string name="please_change_detail_price_manually">Please change detail price manually</string>
    <string name="please_num_piece">Please enter number of pieces</string>
    <string name="please_rack_location">Please enter rack location</string>
    <string name="please_comment">Please enter comment</string>
    <string name="change">Change</string>
    <string name="num_piece">Num Piece</string>
    <string name="entire">Entire</string>
    <string name="user_history">User History</string>
    <string name="search">Search</string>
    <string name="new_customer">New Customer</string>
    <string name="lastname_phone_invoice">Last name,Phone,Invoice</string>
    <string name="holded">Holded</string>
    <string name="not_correct_length_of_number">You entered Not correct length of numbers</string>
    <string name="no_search_result">We don\'t have matched customer</string>
    <string name="no_search_phone_result">We don\'t have matched Phone number</string>
    <string name="no_search_invoice_result">We don\'t have matched Invoice number</string>
    <string name="void_invoice">Void</string>
    <string name="rack">Rack</string>
    <string name="reprint">Reprint</string>
    <string name="subtotal">Subtotal</string>
    <string name="env">Env</string>
    <string name="only_tax">Tax</string>
    <string name="only_total">Total</string>
    <string name="edit_customer">Edit Customer</string>
    <string name="invoice_id">Invoice ID</string>
    <string name="created_at">Created at</string>
    <string name="due_date">Due date</string>
    <string name="qty">Qty</string>
    <string name="select_all_full">All Full paid</string>
    <string name="deselect_all_full">Deselect All full paid</string>
    <string name="select_all_prepaid">All prepaid</string>
    <string name="deselect_all_prepaid">Deselect All pre paid</string>
    <string name="cash">Cash</string>
    <string name="check">Check</string>
    <string name="card">Card</string>
    <string name="unpaid_balance">Unpaid Balance</string>
    <string name="balance">Balance</string>
    <string name="included">Included</string>
    <string name="excluded">Excluded</string>
    <string name="credit_sale">Credit sale</string>
    <string name="unpaid_balance_past">Unpaid balance past :</string>
    <string name="credit_sales">Credit sales :</string>
    <string name="enter_check_num">Please Enter check number</string>
    <string name="entered_amount_is_less_than_balance">Entered amount is less than balance due</string>
    <string name="unpaid_amount_will_be_transfered">Unpaid amount will be transferred to the next order</string>
    <string name="pickup_process_successfully">Pickup process is done successfully</string>
    <string name="title_activity_login">LoginAc</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in">Sign-in</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email">Enter email</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="invalid_input">You input invalid data</string>
    <string name="sign_in_failed">Sign-in failed</string>
    <string name="enter_password_alpha_numeric_symbol">Enter password (alpha numeric,one symbol)</string>
    <string name="email_password_cannot_be_empty">Email, Password cannot be empty</string>
    <string name="not_correct_email">Not correct email format</string>
    <string name="password_least_6">Password should be at least 6 characters</string>
    <string name="password_alpha_numeric_special_character">Password should include alpha numeric and special character</string>
    <string name="passwords_not_matched">Passwords are not matched each other</string>
    <string name="cleaner_name">Cleaner Name :</string>
    <string name="cleaner_phone_nume">Cleaner Phone number :</string>
    <string name="cleaner_street_address">Cleaner Street address :</string>
    <string name="cleaner_city">Cleaner City :</string>
    <string name="cleaner_state">Cleaner State :</string>
    <string name="cleaner_zip">Cleaner Zip :</string>
    <string name="manager_id">Manager ID :</string>
    <string name="sign_out">Sign out</string>
    <string name="add_team">Add Team</string>
    <string name="home">Home</string>
    <string name="items_prices">Items and Prices</string>
    <string name="inventory">Inventory</string>
    <string name="fullpaid">Full paid</string>
    <string name="prepaid">Prepaid</string>
    <string name="partialpaid">Partial paid</string>
    <string name="releases">Releases</string>
    <string name="exit">Exit</string>
    <string name="would_you_like_to_finish">Would you like to finish?</string>
    <string name="connect_stripe">Connect Stripe</string>
</resources>