<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mnManagerHome"
        android:icon="@drawable/home"
        android:title="@string/home"
        app:showAsAction="always" />
    <item
        android:id="@+id/mnManagerSearch"
        android:icon="@drawable/search"
        android:title="@string/search"
        app:showAsAction="always" />

    <item
        android:id="@+id/mnManagerRack"
        android:icon="@drawable/rack"
        android:title="@string/rack"
        app:showAsAction="always" />

    <item
        android:id="@+id/mnManagerInventory"
        android:icon="@drawable/inventory"
        android:title="@string/inventory"
        app:showAsAction="always" />
    <item
        android:id="@+id/mnManagerConveyor"
        android:icon="@drawable/conveyor"
        android:title="@string/settings"
        app:showAsAction="always" />

    <item
        android:id="@+id/mnManagerRelease"
        android:icon="@drawable/release"
        android:title="@string/releases"
        app:showAsAction="always" />

    <!--  this is divider  -->
    <item
        android:title=""
        app:showAsAction="always"/>

    <item
        android:id="@+id/mnManagerSales"
        android:icon="@drawable/sale"
        android:title="@string/sales"
        app:showAsAction="always" />

    <item
        android:id="@+id/mnManagerItemsPrices"
        android:icon="@drawable/item_price"
        android:title="@string/items_prices"
        app:showAsAction="always" />

    <item
        android:id="@+id/mnManagerAddTeam"
        android:icon="@drawable/team"
        android:title="@string/add_team"
        app:showAsAction="always" />

    <item
        android:id="@+id/mnManagerOptionSetting"
        android:icon="@drawable/setting"
        android:title="@string/settings"
        app:showAsAction="always" />

    <item
        android:id="@+id/mnManagerConnectStripe"
        android:icon="@drawable/credit_card"
        android:title="@string/connect_stripe"
        app:showAsAction="always" />

    <item
        android:id="@+id/mnManagerSignout"
        android:icon="@drawable/exit"
        android:title="@string/sign_out"
        app:showAsAction="always" />

</menu>