<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="actViewModel"
            type="com.centuryprogrammer18thwasentsingleland.drop_pickup.MakeInvoiceActVM" />
        <variable
            name="viewModel"
            type="com.centuryprogrammer18thwasentsingleland.drop_pickup.FabricareAddDialogFrgVM" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".drop_pickup.FabricareAddDialogFrg" >

        <EditText
            android:id="@+id/etNameFabricareAddDialogFrg"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/item_name"
            android:inputType="textPersonName"
            android:text="@={viewModel.fabricareName}" />

        <EditText
            android:id="@+id/etNumPieceFabricareAddDialogFrg"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/num_pieces"
            android:inputType="number|textPersonName"
            android:text="@={viewModel.fabricareNumbPieceStr}" />

        <EditText
            android:id="@+id/etPriceFabricareAddDialogFrg"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/price"
            android:inputType="number|numberDecimal"
            android:text="@={viewModel.fabricareBasePriceStr}" />

<!-- radio button group data binding ref) https://stackoverflow.com/a/54262153/3151712 -->
        <RadioGroup
            android:id="@+id/rbtngBaseFabricareAddDialogFrg"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:checkedButton="@={viewModel.baseGroupCheckedId}">

            <RadioButton
                android:id="@+id/rbtnDryFabricareAddDialogFrg"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/dryclean" />

            <RadioButton
                android:id="@+id/rbtnWetFabricareAddDialogFrg"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/wetclean" />

            <RadioButton
                android:id="@+id/rbtnAlterFabricareAddDialogFrg"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/alteration_only" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/rbtngPartialBaseFabricareAddDialogFrg"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:checkedButton="@={viewModel.partialBaseGroupCheckedId}">

            <RadioButton
                android:id="@+id/rbtnCOFabricareAddDialogFrg"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/clean_only" />

            <RadioButton
                android:id="@+id/rbtnPOFabricareAddDialogFrg"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/press_only" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:onClick="@{()-> viewModel.onClickCancelBtn()}"/>

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/add"
                android:onClick="@{()-> viewModel.onClickAddBtn()}"/>
        </LinearLayout>
    </LinearLayout>
</layout>
