<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.centuryprogrammer18thwasentsingleland.drop_pickup.pickup.InvoiceOrderPickupFrgVM" />
        <variable
            name="frg"
            type="com.centuryprogrammer18thwasentsingleland.drop_pickup.pickup.InvoiceOrderPickupFrg" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".drop_pickup.pickup.InvoiceOrderPickupFrg" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lbInvoiceIdPickupFrg"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="2"
                android:background="#000000"
                android:gravity="center"
                android:text="@string/invoice_id"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lbCreatedAtPickupFrg"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="2"
                android:background="#000000"
                android:gravity="center"
                android:text="@string/created_at"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lbDuedatePickupFrg"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="2"
                android:background="#000000"
                android:gravity="center"
                android:text="@string/due_date"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lbRackPickupFrg"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="2"
                android:background="#000000"
                android:gravity="center"
                android:text="@string/rack"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lbPricePickupFrg"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="2"
                android:background="#000000"
                android:gravity="center"
                android:text="@string/price"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lbQtyPickupFrg"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="#000000"
                android:gravity="center"
                android:text="@string/qty"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lbPickupCheckPickupFrg"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="#000000"
                android:gravity="center"
                android:text="@string/fullpaid"
                android:textColor="#FFFFFF"
                android:textSize="10sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lbPrepaidCheckPickupFrg"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="#000000"
                android:gravity="center"
                android:text="@string/prepaid"
                android:textColor="#FFFFFF"
                android:textSize="10sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lbPartialpaidCheckPickupFrg"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="#000000"
                android:gravity="center"
                android:text="@string/partialpaid"
                android:textColor="#FFFFFF"
                android:textSize="10sp"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvInvoiceOrderPickupFrg"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:layout_weight="7" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSelectAllFullInvoiceOrderPickupFrg"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:onClick="@{()-> viewModel.onClickAllFullSelect()}"
                android:text="@string/select_all_full"
                android:textSize="10sp" />

            <Button
                android:id="@+id/btnDeselectAllFullInvoiceOrderPickupFrg"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:onClick="@{()-> viewModel.onClickALLFullDeselect()}"
                android:text="@string/deselect_all_full"
                android:textSize="10sp" />

            <Button
                android:id="@+id/btnSelectAllPreInvoiceOrderPickupFrg"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:onClick="@{()-> viewModel.onClickAllPreSelect()}"
                android:text="@string/select_all_prepaid"
                android:textSize="10sp" />

            <Button
                android:id="@+id/btnDeselectAllPreInvoiceOrderPickupFrg"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:onClick="@{()-> viewModel.onClickALLPreDeselect()}"
                android:text="@string/deselect_all_prepaid"
                android:textSize="10sp" />
        </LinearLayout>
    </LinearLayout>
</layout>
